@@ -184,6 +184,9 @@ override_dh_fixperms:
 	chmod +s debian/$(sname)$(INSTALL_PATH)/VBoxNetAdpCtl
 	chmod +s debian/$(sxname)$(INSTALL_PATH)/VirtualBox
 
+	chmod 644 debian/$(sxname)$(INSTALL_PATH)/*.gc
+	chmod 644 debian/$(sxname)$(INSTALL_PATH)/*.r0
+
 	chmod 644 debian/$(sname)$(INSTALL_PATH)/sdk/bindings/xpcom/python/xpcom/*.py
 	chmod 644 debian/$(sname)$(INSTALL_PATH)/sdk/bindings/xpcom/python/xpcom/server/*.py
 	chmod 644 debian/$(sname)$(INSTALL_PATH)/sdk/bindings/xpcom/python/xpcom/client/*.py
@@ -223,6 +226,13 @@ override_dh_dkms:
 
 override_dh_strip:
 	dh_strip --dbg-package=$(sname)-dbg
+
+	# strip files not handled by dh_strip
+ifeq (,$(filter nostrip,$(DEB_BUILD_OPTIONS)))
+	set -ev && for file in debian/$(sname)/usr/lib/virtualbox/*.gc debian/$(sname)/usr/lib/virtualbox/*.r0; do \
+	    strip --strip-debug --remove-section=.comment --remove-section=.note $${file}; \
+	done
+endif
 
 override_dh_shlibdeps:
 	dh_shlibdeps -p$(sname) -X debian/$(sname)$(INSTALL_PATH)/VBoxTestOGL -- \
