@@ -12,6 +12,8 @@ virtualbox-ose (4.0.6-dfsg-1) UNRELEASED; urgency=low
     auto-mounting shared folders work.
   * Automatically detect the distribution version for backports.
     - Build-depend on lsb-release.
+  * Strip *.gc and *.r0 files that are not handled by dh_strip and fix their
+    file permissions.
 
  -- Felix Geyer <debfx-pkg@fobos.de>  Fri, 22 Apr 2011 11:31:53 +0200
 
